--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
 【 バージョン 】　2.0.4
-【   作成日   】　2009/4/xx
+【   作成日   】　2009/4/25
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
 【 ランタイム 】　Ruby 1.9.1～,Ruby/SDL 2.1～,SDL
@@ -891,10 +891,9 @@ v2.0.3(2009.4.19)
 ・サンプルball_action_sample.rb, utility_test3.rbを追加
 ・ドキュメントの修正
 
-v2.0.3(2009.4.19)
-・MANIFESTファイルを追加
-・gemspecファイルの修正
+v2.0.4(2009.4.25)
 ・Windows以外のOSで、install_miyako.rbが正しく動作しない問題を修正
+・CircleCollision.intervalとCircleCollision#intervalメソッドを追加
 ・CollisionとCircleCollisionとの当たり判定ができるように、共通のデータを持たせた
 　(判定処理は、レシーバのクラスに依る)
 ・Collision.newの引数の幅・高さが0以下の時は例外が発生するように変更
@@ -902,6 +901,9 @@ v2.0.3(2009.4.19)
 　(引数に実数が含まれる場合は、全て実数として処理する)
 　(Utility.product_liner_f/product_liner_by_square_fは、互換性のために残す)
 ・サンプルutility_test4.rb(utility_test.rbの実数版)、collision_test2.rbを追加
+・サンプルcircle_collision_test.rbの内容を変更
+・MANIFESTファイルを追加
+・gemspecファイルの修正
 
 *******************************************************************************
 このReadMeファイルは「れ～どめ～えじた～」によって作成されました。
