--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 *******************************************************************************
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
-【 バージョン 】　2.0.5.1
-【   作成日   】　2009/4/26
+【 バージョン 】　2.1.0
+【   作成日   】　2009/6/xx
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
 【 ランタイム 】　Ruby 1.9.1～,Ruby/SDL 2.1～,SDL
@@ -15,7 +15,7 @@
 
 【 注意事項  】
 
-本バージョンは、2.0.0公式リリース版です。
+本バージョンは、2.1.0公式リリース版です。
 本バージョンでは、ドキュメント・リファレンスは不十分ですが、「サイログ。」内や、サンプルプログラムの紹介等で随時ドキュメントを公開して行きます。
 （RDOC化を進めていますので、我こそはと思う方は是非・・・）
 
@@ -59,6 +59,7 @@ Miyakoのタイトルは、以下の事柄に由来しています
 ・アニメーションを管理するAnimationSpriteクラス
 ・当たり判定を簡単に実装できるCollisionクラス
 ・スプライト以外の画像を表示できるSpriteUnit構造体
+・配列に画像描画などの機能を付け加えるSpriteArrayモジュール(Arrayクラスには標準でmixin済み)
 ・2次元グラフィックライブラリCairoとの画像変換を容易にしたMiyakoCairoモジュール(EXT扱い、v2.0～)
 ・拡張ライブラリを使用した高速な描画
 ・Windows/Linux/MacOSX等に対応(他OSへの動作レポートお願いします)
@@ -92,7 +93,7 @@ PAD : BUFFALO BGC-FC802
 OS  : Microsoft WindowsXp SP3
       Microsoft WindowsVista Ultimate(x64) SP1
 DEV : Notepad++ v5.3.1-6
-      mswin32版Ruby 1.9.1-p0 + Ruby/SDL 2.1
+      mswin32版Ruby 1.9.1-p129 + Ruby/SDL 2.1
       MinGW+MSYS(miyako_no_katanaビルド)
       rcairo-1.8.0(miyako-cairo検証用)
 
@@ -103,7 +104,7 @@ MEM : 784(256+512)MB
 PAD : SANWA SUPPLY JY-P1W
 OS  : Microsoft WindowsXp SP3
 DEV : Notepad++ v5.3.1-6
-      mswin32版Ruby 1.9.1-p0 + Ruby/SDL 2.1
+      mswin32版Ruby 1.9.1-p129 + Ruby/SDL 2.1
       MinGW+MSYS(miyako_no_katanaビルド)
 
 【 動作確認環境 】
@@ -924,6 +925,165 @@ v2.0.5(2009.4.26)
 
 v2.0.5.1(2009.4.26)
 ・アンインストールスクリプト(uninstall_miyako.rb)追加
+
+v2.1.0(2009.6)
+<バグ修正>
+・Parts#removeメソッドで削除していないオブジェクトがあったため問題を修正
+・同時再生数を超えて効果音を再生するとプログラムが落ちる問題を修正
+・各種オブジェクトが正しく複製されない問題を修正
+　(ただし、Audio::BGM,Audio::SEは、内部データを複製すると落ちるため、複製していない)
+・Yuki#select_plotで渡したプロットの引数チェックを行っていなかったバグを修正
+<仕様変更>
+・miyako.rbで組み込んでいるライブラリの順番を変更
+・$miyako_auto_openグローバル変数により、強制的な画面のオープンを解除
+　必要な部分だけ呼び出し(Miyako.init,Audio.init,Screen.init,Font.init)
+　(Miyako.open/Screen.open呼び出し前のSprite作成不可)
+・ゲーム中に流せるBGMは1曲のみに制限(効果音はその限りではない)
+・音声系クラス(Audio::BGM,Audio::SE)の複写メソッドの使用を禁止
+・例外クラスの追加(MiyakoErrorのみ→複数クラスの混在)
+・Screenモジュールの初期化で、既存のSDL::Screenクラスインスタンスを利用可能(他ライブラリとの親和性向上)
+・miyako.rbの組み込みのみ行うmiyako_require_only.rb追加
+・Sceneモジュール内部で使用する変数の構成の変更
+　(@@scenes,@now,@prev,@next,@upper -> @@scenes, @@pool)
+・ArrayクラスにSpriteArrayモジュールをmixin
+・FixedMapクラスにSpriteBase,Animationモジュールをmixin
+・FixedMapLayerクラスにSpriteBase,Animationモジュールをmixin
+・MapクラスにSpriteBase,Animationモジュールをmixin
+・MapEventモジュールにSpriteBase,Animationモジュールをmixin
+・MapLayerクラスにSpriteBase,Animationモジュールをmixin
+・MovieクラスにAnimationモジュールをmixin
+・PartsクラスにSpriteBase,Animationモジュールをmixin
+・PlaneクラスにSpriteBase,Animationモジュールをmixin
+・ViewportクラスにSpriteBase,Animationモジュールをmixin
+・YukiクラスにSpriteBase,Animationモジュールをmixin
+・Audio::BGM,Audio::SEクラスのインスタンスを複写しようとすると例外発生するように変更
+・Audio::BGM.newメソッドの引数インタフェースを変更
+・Audio::BGM.newメソッドの処理内容を変更
+・Audio::BGM#play,start,fade_inメソッドの引数インタフェースを変更
+・Audio::BGM#play,start,fade_inメソッドの返却値を変更
+・Audio::BGM#play,start,fade_in,playing?,disposeの処理内容を変更
+・Audio::SE.newメソッドの引数インタフェースを変更
+・Audio::SE.channels=の返却値を変更
+・Audio::SE#disposeの処理内容を変更
+・Audio::SE#play,start,fade_inメソッドの返却値を変更
+・Miyako.main_loopメソッド内部でAudio.update呼び出しを追加
+・Story#runメソッド内部でAudio.update呼び出しを追加
+・Choises#update_animationの返却値を変更
+・TextBox#update_animationの返却値を変更
+・Yuki#update_animationの返却値を変更
+・Miyako::versionの値を変更("2.0.0" -> "2.1.0")
+・Sprite#to_unitの値を複写したものに変更
+・SpriteAnimation#to_unitの値を複写したものに変更
+・Screen.to_unitの値を複写したものに変更
+・Story::Sceneモジュールの内部構成を変更
+・Yuki表示部の内部処理を変更
+・Yukiを使用したとき、決定キー・コマンド決定キーにスペースバーを追加
+・Yukiを使用したとき、コマンドキャンセルきーにエスケープキーを追加
+・Yukiのスクリプトに対して引数を渡すことができるようになった(↓参照)
+・Yuki#start_plotのインタフェース変更(with_update_inputを廃止、*paramsを追加)
+・各クラス・構造体・モジュールのmove,move_to,resize,resize_toメソッドを、
+　move!,move_to!,resize!,resize_to!に変更
+　(既存のメソッドは、「変更した後の値を新しいインスタンスとして返す(自身は変更しない)」に変更)
+・Layoutモジュールの(outside_)left,(outside_)top,(outside_)right,(outside_)bottom,centeringメソッドを、
+　(outside_)left!,(outside_)top!,(outside_)right!,(outside_)bottom!,centering!に変更
+　(既存のメソッドは、「変更した後の値を新しいインスタンスとして返す(自身は変更しない)」に変更)
+・Segment#reset->reset!に変更
+・Viewport#viewportメソッドの返却値を変更(
+<ファイル追加>
+・lib/Miyako/miyako_require_only.rb
+・lib/Miyako/API/exceptions.rb
+・lib/Miyako/API/sprite_list.rb
+<グローバル変数追加>
+・$miyako_auto_open(require時に、同時に画面などの初期化を行うかどうかのフラグ)
+<定数追加>
+・Miyako::VERSION
+<定数削除>
+・Screen::BPP
+<構造体追加>
+・ListPair
+・ScenePool
+<クラス追加>
+・ListPairStruct
+・MiyakoCopyError
+・MiyakoFileFormatError
+・MiyakoIOError
+・MiyakoProcError
+・MiyakoTypeError
+・MiyakoValueError
+・SpriteList
+<モジュール追加>
+・DeepCopy
+・SpriteArray
+<mixin>
+・ArrayクラスにSpriteArrayモジュールをmixin
+・ObjectクラスにDeepCopyモジュールをmixin
+<クラス・モジュールメソッド追加>
+・Audio.init
+・Audio.initialized?
+・Audio.update
+・Audio::BGM.update
+・Audio::SE.update
+・Audio::SE.playing_any?
+・Audio::SE.channels
+・Input.init
+・Layout.copy_layout
+・Font.init
+・Font.initialized?
+・Miyako.init
+・Miyako.initialized?
+・Miyako.open
+・Screen.init
+・Screen.initialized?
+・Utility.interval
+・Utility.theta
+・Yuki.add_method
+<インスタンスメソッド追加>
+・Scene#story
+・Scene#prev_scene
+・Scene#now_scene
+・SpriteBase#render_to
+・SpriteBase#visible
+・SpriteBase#visible=
+・SpriteBase#show
+・SpriteBase#hide
+・Yuki#over_exec
+・Yuki#wait_over_exec
+・Yuki#vars_names
+・Yuki#parts_names
+・Yuki#render_to
+・Yuki#update_animation
+・Audio::BGM#loop_count
+・Audio::BGM#in_the_loop?
+・Audio::BGM#loop_count_up
+・Audio::BGM#allow_loop_count_up
+・Audio::BGM#allow_loop_count_up?
+・Audio::BGM#start
+・Audio::BGM#pausing?
+・Audio::BGM#fade_in?
+・Audio::BGM#fade_out?
+・Audio::SE#start
+・Audio::SE#fade_in
+・Audio::SE#fade_out
+・Audio::SE#fade_in?
+・Audio::SE#fade_out?
+・Plane::update_animation
+・Parts#delete
+・Parts#names
+・Parts#insert
+・Parts#insert_after
+・Parts#swap
+・Rect#pos
+・Rect#size
+・Scene#upper_scene
+・Scene#next_scene
+・Segment#x
+・Segment#y
+・Segment#min_x
+・Segment#max_x
+・Segment#min_y
+・Segment#max_y
+・Square#pos
+・Square#size
 
 *******************************************************************************
 このReadMeファイルは「れ～どめ～えじた～」によって作成されました。
