change SpriteList#show,hide interface add SpriteList#add fixed Sprite#show/hide bug

--- a/README
+++ b/README
@@ -932,6 +932,7 @@ v2.1.0(2009.7.9)
 ・同時再生数を超えて効果音を再生するとプログラムが落ちる問題を修正
 ・各種オブジェクトが正しく複製されない問題を修正
 　(ただし、Audio::BGM,Audio::SEは、内部データを複製すると落ちるため、複製していない)
+・Sprite#show/hideが機能していなかったバグを修正
 ・Yuki#select_plotで渡したプロットの引数チェックを行っていなかったバグを修正
 ・Alt+Enterを押してもフルスクリーンにならないバグを修正
 ・Collision.collisionが正しく値を返さないバグを修正
