added SpriteBase#.ow added SpriteBase#.oh added SpriteBase#.part_rect added SpriteBase#.image_size added SpriteBase#.image_rect deleted Layout#.ow deleted Layout#.oh deleted SpriteBase#.broad_rect fixed sample/rasterscroll.rb

--- a/README
+++ b/README
@@ -1080,7 +1080,8 @@ v2.1.0(2009.7.9)
 ・Input.mouse_disable
 ・Input.mouse_enable?
 ・Input.init
-・Layout.copy_layout
+・Layout#.copy_layout
+・Layout#.broad_rect
 ・Font.init
 ・Font.initialized?
 ・MapChipFactory.create
@@ -1097,9 +1098,18 @@ v2.1.0(2009.7.9)
 ・Sprite.sprites
 ・Sprite.[]
 ・Sprite.[]=
+・SpriteBase#.ow
+・SpriteBase#.oh
+・SpriteBase#.part_rect
+・SpriteBase#.image_size
+・SpriteBase#.image_rect
 ・Utility.interval
 ・Utility.theta
 ・Yuki.add_method
+<クラス・モジュールメソッド廃止>
+・Layout#.ow
+・Layout#.oh
+・SpriteBase#.broad_rect
 <インスタンスメソッド追加>
 ・Collision.covers?
 ・Collision.covered?
