--- a/README
+++ b/README
@@ -1019,6 +1019,7 @@ v2.1.0(2009.7.9)
 ・MapEvent#.move!,move_to!,move,move_toの後ろに可変引数を追加(移動時の細かい設定)
 ・Map.new、FixedMap.newで、イベントが無いときでも0番レイヤーを生成するように変更
 ・マウス、キーボード、ゲームパッドの利用選択が可能に(enable、disableの設定が可能に)
+・FontクラスにSpriteBase、Animastion、Layoutモジュールをmixin、スプライトとして扱うことが可能に
 <ファイル追加>
 ・miyako_sprite2.c
 ・miyako_input_audio.c
@@ -1152,7 +1153,11 @@ v2.1.0(2009.7.9)
 ・FixedMap#all_event_pos_move!
 ・FiexedMapLayer#ignore_list
 ・FiexedMapLayer#layer
-・Layout#include_snap_child?
+・Font#text
+・Font#text=
+・Layout#.include_snap_child?
+・Layout#.laout_pos
+・Layout#.laout_size
 ・Map#map_size(alias size)
 ・Map#map_w(alias w)
 ・Map#map_h(alias h)
