fixed sample/takahashi.rb fixed sample/collision_test2.rb fixed WaitCounter#start fixed WaitCounter#stop fixed WaitCounter#now fixed WaitCounter#remind fixed WaitCounter#waiting fixed WaitCounter#finish? added WaitCounter#reset added WaitCounter#resume

--- a/README
+++ b/README
@@ -1277,6 +1277,8 @@ v2.1.0(2009.7.9)
 ・WaitCounter#call
 ・WaitCounter#now
 ・WaitCounter#remain
+・WaitCounter#reset
+・WaitCounter#resume
 ・WaitCounter#size
 <インスタンスメソッド廃止>
 ・Segments#min_x
