fixed Color.[] bug.

--- a/README
+++ b/README
@@ -938,6 +938,7 @@ v2.1.0(2009.7.9)
 ・Collision.collisionが正しく値を返さないバグを修正
 ・FixedMapクラスでpos,sizeメソッドの値がレイアウトの位置になっていなかった問題を修正
 ・MapEventモジュールのmove,move_toメソッドで存在しない構造体を生成していた問題を修正
+・Color.[]で、勝手に透明度部分が書き換わる問題を修正
 <仕様変更>
 ・"require 'miyako'"でもロード可能
 ・miyako.rbで組み込んでいるライブラリの順番を変更
