ファイルの整理 (EXT/miyako_cairo.rbの削除) (API/basic_data.rbの分離->API/basic_data.rb,struct_point.rb,struct_size.rb,struct_rect.rb,struct_square.rb,struct_segment.rb,color.rb,wait_counter.rb) コールバックの強化 (append(_post)_callbackに、引数callsを渡すと、指定回数のみコールバックする) (コールバックからの登録解除(remove(_post)_callback)) (コールバック数の取得(callback_calls,callback_count)

--- a/README
+++ b/README
@@ -1028,6 +1028,7 @@ v2.1.0(2009.7.9)
 ・Choiceクラスをスプライト扱いに変更(SpriteBase,Animation,Layoutをmixin)
 ・Choices.newメソッドの引数インタフェースを変更(ただし、既存の処理に影響しない)
 ・Miyako.main_loopの引数インタフェース変更(ただし、既存の処理に影響しない)
+・Windows版1.9でのrcairoが簡単に使えるようになるまで、MiyakoCairoクラスの添付を配布を中止します
 <ファイル追加>
 ・miyako_sprite2.c
 ・miyako_input_audio.c
@@ -1036,9 +1037,19 @@ v2.1.0(2009.7.9)
 ・lib/Miyako/miyako_require_only.rb
 ・lib/miyako.rb
 ・lib/miyako_require_only.rb
+・lib/Miyako/API/color.rb
 ・lib/Miyako/API/exceptions.rb
 ・lib/Miyako/API/i_yuki.rb
 ・lib/Miyako/API/sprite_list.rb
+・lib/Miyako/API/struct_point.rb
+・lib/Miyako/API/struct_size.rb
+・lib/Miyako/API/struct_rect.rb
+・lib/Miyako/API/struct_square.rb
+・lib/Miyako/API/struct_segment.rb
+・lib/Miyako/API/wait_counter.rb
+<ファイル削除>
+・lib/Miyako/EXT/miyako_cairo.rb
+・sample/cairo_sample.rb
 <グローバル変数追加>
 ・$miyako_auto_open(require時に、同時に画面などの初期化を行うかどうかのフラグ)
 <定数追加>
@@ -1302,6 +1313,10 @@ v2.1.0(2009.7.9)
 ・Square#/
 ・WaitCounter#append_callback
 ・WaitCounter#append_post_callback
+・WaitCounter#remove_callback
+・WaitCounter#remove_post_callback
+・WaitCounter#callback_calls
+・WaitCounter#callback_count
 ・WaitCounter#call
 ・WaitCounter#now
 ・WaitCounter#remain
