--- a/README
+++ b/README
@@ -1088,6 +1088,14 @@ v2.1.0(2009.7.9)
 ・ArrayクラスにSpriteArrayモジュールをmixin
 ・ObjectクラスにDeepCopyモジュールをmixin
 <クラス・モジュールメソッド追加>
+・Animation.[]
+・Animation.[]=
+・Animation.anim_hash
+・Animation.reset
+・Animation.start
+・Animation.stop
+・Animation.update
+・Animation.update_animation
 ・Audio.init
 ・Audio.initialized?
 ・Audio.update
@@ -1202,6 +1210,8 @@ v2.1.0(2009.7.9)
 ・Layout#.include_snap_child?
 ・Layout#.laout_pos
 ・Layout#.laout_size
+・Layout#.relative_move_to
+・Layout#.relative_move_to!
 ・Map#map_size(alias size)
 ・Map#map_w(alias w)
 ・Map#map_h(alias h)
