・Fixed Plane#render,render_to bug.

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 *******************************************************************************
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
-【 バージョン 】　2.1.1
-【   作成日   】　2009/10/16
+【 バージョン 】　2.1.2
+【   作成日   】　2009/10/XX
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
 【 ランタイム 】　Ruby 1.9.1～,Ruby/SDL 2.1～,SDL
@@ -1343,7 +1343,7 @@ v2.1.0(2009.10.9)
 ・Segments#max_x
 ・Segments#max_y
 
-v2.1.0.1(2009.10.16)
+v2.1.1(2009.10.16)
 <バグ修正>
 ・InitiativeYuki#commandメソッドで、選択不可の選択肢を選んだときにメソッド処理が終了するバグを修正
 ・Font#draw_textメソッドで、文字を転送先画像の外で描画するとSEGVを起こす問題を修正
@@ -1364,6 +1364,25 @@ v2.1.0.1(2009.10.16)
 <クラス・モジュールメソッド廃止>
 <インスタンスメソッド追加>
 ・WaitCounter#stop_callback_inner
+<インスタンスメソッド廃止>
+
+v2.1.2(2009.10.XX)
+<バグ修正>
+・Plane#render,render_toメソッドで、画面より小さいスプライトを描画しようとしても何も描画されないバグを修正
+<機能改善>
+<仕様変更>
+<ファイル追加>
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+<クラス・モジュールメソッド廃止>
+<インスタンスメソッド追加>
 <インスタンスメソッド廃止>
 
 *******************************************************************************
