・fixed Plane#move!,move_to! bug ・fixed Plane#move,move_to bug

--- a/README
+++ b/README
@@ -1369,6 +1369,8 @@ v2.1.1(2009.10.16)
 v2.1.2(2009.10.XX)
 <バグ修正>
 ・Plane#render,render_toメソッドで、画面より小さいスプライトを描画しようとしても何も描画されないバグを修正
+・Plane#move!,move_to!メソッドで、描画時に画面の左上が描画されない時があるバグを修正
+・Plane#move,move_toメソッドが、move!、move_to!と全く同じ動作をするバグを修正
 <機能改善>
 <仕様変更>
 <ファイル追加>
