--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 *******************************************************************************
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
-【 バージョン 】　2.1.2
-【   作成日   】　2009/10/25
+【 バージョン 】　2.1.3
+【   作成日   】　2009/10/28
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
 【 ランタイム 】　Ruby 1.9.1～,Ruby/SDL 2.1～,SDL
@@ -15,7 +15,7 @@
 
 【 注意事項  】
 
-本バージョンは、2.1.1公式リリース版です。
+本バージョンは、2.1.3公式リリース版です。
 本バージョンでは、ドキュメント・リファレンスは不十分ですが、「サイログ。」内や、サンプルプログラムの紹介等で随時ドキュメントを公開して行きます。
 （RDOC化を進めていますので、我こそはと思う方は是非・・・）
 
@@ -1396,6 +1396,34 @@ v2.1.2(2009.10.25)
 ・Sprite#render_rect_xy_to
 ・Sprite#render_rect2_xy
 ・Sprite#render_rect2_xy_to
+<インスタンスメソッド廃止>
+
+v2.1.3(2009.10.28)
+<バグ修正>
+<機能改善>
+・Slideモジュールの見直し(update,update_animationなどをオーバーライドしやすいように)
+<仕様変更>
+<ファイル追加>
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+<クラス・モジュールメソッド廃止>
+<モジュール関数追加>
+Slide#.slide_body
+Slide#.slide_show
+Slide#.slide_hide
+Slide#.slide_update
+Slide#.slide_update_animation
+Slide#.slide_start
+Slide#.slide_stop
+Slide#.slide_reset
+<インスタンスメソッド追加>
 <インスタンスメソッド廃止>
 
 *******************************************************************************
