--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 *******************************************************************************
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
-【 バージョン 】　2.1.4
-【   作成日   】　2009/11/10
+【 バージョン 】　2.1.5
+【   作成日   】　2010/01/01
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
 【 ランタイム 】　Ruby 1.9.1～,Ruby/SDL 2.1～,SDL
@@ -15,7 +15,7 @@
 
 【 注意事項  】
 
-本バージョンは、2.1.4公式リリース版です。
+本バージョンは、2.1.5公式リリース版です。
 本バージョンでは、ドキュメント・リファレンスは不十分ですが、「サイログ。」内や、サンプルプログラムの紹介等で随時ドキュメントを公開して行きます。
 （RDOC化を進めていますので、我こそはと思う方は是非・・・）
 
@@ -1470,14 +1470,41 @@ v2.1.4(2009.11.10)
 ・(Initiative)Yuki#pre_hide
 ・(Initiative)Yuki#bg_show
 ・(Initiative)Yuki#bg_hide
-・(Initiative)Yuki#bg_show
-・(Initiative)Yuki#bg_hide
 ・(Initiative)Yuki#show_textbox
 ・(Initiative)Yuki#show_commandbox
 ・(Initiative)Yuki#hide_textbox
 ・(Initiative)Yuki#hide_commandbox
 ・(Initiative)Yuki#box_shared?
 <インスタンスメソッド廃止>
+
+v2.1.5(2010.01.01)
+<バグ修正>
+・Layout#.include_snap_child?メソッドの戻り値間違いを修正
+・拡張ライブラリのソースがVisualCでビルドできない問題を修正
+・無駄なForwardableモジュールのmixinを削除
+・無駄なforwardable.rbの読み込みを削除（二重requireの解決）
+・Forwardable.rbの読み込みを削除（ファイル名間違い）
+・一部ソースを、Ruby.1.9.2で動作しないものがあったため修正
+・一部サンプルを、Ruby1.9.2で動作するように修正
+<機能改善>
+<仕様変更>
+・起動時の表示モードをウインドウモードに変更
+<ファイル追加>
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+<クラス・モジュールメソッド廃止>
+<モジュール関数追加>
+<インスタンスメソッド追加>
+<インスタンスメソッド廃止>
+・Parts#part_move!
+・Parts#part_move_to!
 
 *******************************************************************************
 このReadMeファイルは「れ～どめ～えじた～」によって作成されました。
