--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
 【 バージョン 】　2.1.8
-【   作成日   】　2010/01/XX
+【   作成日   】　2010/01/16
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
 【 ランタイム 】　Ruby 1.9.1～,Ruby/SDL 2.1～,SDL
@@ -1588,10 +1588,11 @@ v2.1.7(2010.01.03)
 ・InitiativeScenarioEngine#create_engine_stack
 <インスタンスメソッド廃止>
 
-v2.1.8(2010.01.XX)
+v2.1.8(2010.01.16)
 <バグ修正>
 ・Input.updateで、ゲームパッドの方向ボタンが有効なときに、アナログスティックを触る(JoyHatイベントが発生する)と、エラーを出すバグを修正
 <機能改善>
+・InitiativeScenarioEngineクラスにGC許可・不可の指定を追加した
 <仕様変更>
 ・Miyako.main_loopに第2引数を追加(ループの最後にガベージコレクションするときは、第2引数をtrueにする)
 ・Movieクラスで動画を再生できない問題が発生いたしましたので、Movieクラスの使用を一時停止します
@@ -1609,6 +1610,9 @@ v2.1.8(2010.01.XX)
 <モジュール関数追加>
 <モジュール関数廃止>
 <インスタンスメソッド追加>
+・InitiativeScenarioEngine#gc_enable
+・InitiativeScenarioEngine#gc_disable
+・InitiativeScenarioEngine#gc_enable?
 <インスタンスメソッド廃止>
 
 *******************************************************************************
