--- a/README
+++ b/README
@@ -1620,6 +1620,7 @@ v2.1.9(2010.03.07)
 ・ScenarioEngine#canceled?が正しく動作しない(オブジェクトの参照間違い)バグを修正
 ・InitiativeScenarioEngine#canceled?が正しく動作しない(オブジェクトの参照間違い)バグを修正
 ・Audio::SE#startの記述ミスを修正
+・SpriteListクラスのオブジェクトからsnap等のレイアウト関係メソッドを呼び出すとプログラムが墜ちるバグを修正
 <機能改善>
 ・シーン管理(Story,Scene)に、オブジェクトの引き継ぎ機能を追加
 ・シーン終了時、返却値に[次シーン名,オブジェクト]を渡すことで、次シーンでは、全シーンの状態などを受け取ることが可能になった
