--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 *******************************************************************************
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
-【 バージョン 】　2.1.13
-【   作成日   】　2010/05/20
+【 バージョン 】　2.1.14
+【   作成日   】　2010/06/11
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
 【 ランタイム 】　Ruby 1.9.1～,Ruby/SDL 2.1～,SDL
@@ -15,7 +15,7 @@
 
 【 注意事項  】
 
-本バージョンは、2.1.13公式リリース版です。
+本バージョンは、2.1.14公式リリース版です。
 本バージョンでは、ドキュメント・リファレンスは不十分ですが、「サイログ。」内や、サンプルプログラムの紹介等で随時ドキュメントを公開して行きます。
 （RDOC化を進めていますので、我こそはと思う方は是非・・・）
 
@@ -1802,6 +1802,33 @@ v2.1.13(2010.05.20)
 <ドキュメント>
 ・リファレンスマニュアルの拡充
 　・Bitmap,Choice,Choices,Map,MapLayer,FixedMap,FixedMapLayer,Utility,Viewport
+
+v2.1.14(2010.06.11)
+<バグ修正>
+・InitiativeScenarioEngine.add_methodメソッドが用意されていなかったのを修正
+<機能改善>
+・Slidesの背景に、任意の画像を追加できるようにした
+・SimpleStory#run, Story#runメソッドに、初期のhand_overを渡せるようにした
+・フォントフェースの統一化のため、梅Plusゴシック(sans_serif)と梅明朝(serif)を同梱した
+<仕様変更>
+・プラットフォーム関係無く、Font.serifは梅明朝、Font.sans_serifは梅Plusゴシックを取り込むようにした
+<ファイル追加>
+・フォントファイル(梅明朝・梅Plus)
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+<クラス・モジュールメソッド廃止>
+<モジュール関数追加>
+<モジュール関数廃止>
+<インスタンスメソッド追加>
+<インスタンスメソッド廃止>
+<ドキュメント>
 
 *******************************************************************************
 このReadMeファイルは「れ～どめ～えじた～」によって作成されました。
