add ScenarioEngine common use

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 *******************************************************************************
 【   作者名   】　サイロス誠
 【  ソフト名  】　Interactive Media Authoring System "Miyako"
-【 バージョン 】　2.1.14
+【 バージョン 】　2.1.15
 【   作成日   】　2010/06/11
 【    種別    】　フリーウェア
 【  開発言語  】　Ruby 1.9.1
@@ -15,7 +15,7 @@
 
 【 注意事項  】
 
-本バージョンは、2.1.14公式リリース版です。
+本バージョンは、2.1.15公式リリース版です。
 本バージョンでは、ドキュメント・リファレンスは不十分ですが、「サイログ。」内や、サンプルプログラムの紹介等で随時ドキュメントを公開して行きます。
 （RDOC化を進めていますので、我こそはと思う方は是非・・・）
 
@@ -1827,6 +1827,37 @@ v2.1.14(2010.06.11)
 <モジュール関数追加>
 <モジュール関数廃止>
 <インスタンスメソッド追加>
+<インスタンスメソッド廃止>
+<ドキュメント>
+
+v2.1.15(2010.06.11)
+<バグ修正>
+<機能改善>
+<仕様変更>
+<ファイル追加>
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+・ScenarioEngine.[]
+・ScenarioEngine.[]=
+・InitiativeScenarioEngine.[]
+・InitiativeScenarioEngine.[]=
+<クラス・モジュールメソッド廃止>
+<モジュール関数追加>
+<モジュール関数廃止>
+<インスタンスメソッド追加>
+・ScenarioEngine#[]
+・ScenarioEngine#[]=
+・ScenarioEngine#common_use
+・InitiativeScenarioEngine#[]
+・InitiativeScenarioEngine#[]=
+・InitiativeScenarioEngine#common_use
 <インスタンスメソッド廃止>
 <ドキュメント>
 
