added Screen.enable_render, disable_render
fixed font bugs.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1712,3 +1712,32 @@ v2.1.19(2010.10.08)
 <インスタンスメソッド廃止>
 <ドキュメント>
 <その他>
+
+v2.1.20(2010.12.20)
+<バグ修正>
+・Windows上で、実行ディレクトリ(もしくはそのサブディレクトリ上)に日本語のファイル名があるとエラーが出たり、プログラムが正常に動作しない問題を修正
+<機能改善>
+<仕様変更>
+・MacOSX上のシステムフォントパスのうち、日本語で使用しているディレクトリを削除
+・システムフォントを梅明朝・梅ゴシックに制限
+<ファイル追加>
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+・Screen.enable_render
+・Screen.disnable_render
+・Screen.render_attr
+・Screen.render_attr=
+<クラス・モジュールメソッド廃止>
+<モジュール関数追加>
+<モジュール関数廃止>
+<インスタンスメソッド追加>
+<インスタンスメソッド廃止>
+<ドキュメント>
+<その他>
