fix bugs and append sample files.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1741,3 +1741,54 @@ v2.1.20(2010.12.20)
 <インスタンスメソッド廃止>
 <ドキュメント>
 <その他>
+
+v2.1.21(2011.05.08)
+<バグ修正>
+・Story/SimpleStory実行中、サブシーンが使えないバグを修正
+<機能改善>
+<仕様変更>
+<ファイル追加>
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+<クラス・モジュールメソッド廃止>
+<モジュール関数追加>
+<モジュール関数廃止>
+<インスタンスメソッド追加>
+<インスタンスメソッド廃止>
+<ドキュメント>
+<その他>
+
+v2.1.22(2011.05.28)
+<バグ修正>
+・Shape.boxメソッドでエラーが出るバグを修正
+・Shape.roundboxメソッドでエラーが出るバグを修正
+・Shape.circleメソッドでエラーが出るバグを修正
+<機能改善>
+<仕様変更>
+<ファイル追加>
+・sample/shape_danmaku.rb
+・sample/shape_danmaku2.rb
+<ファイル削除>
+<グローバル変数追加>
+<定数追加>
+<定数削除>
+<構造体追加>
+<クラス追加>
+<モジュール追加>
+<mixin>
+<クラス・モジュールメソッド追加>
+<クラス・モジュールメソッド廃止>
+<モジュール関数追加>
+<モジュール関数廃止>
+<インスタンスメソッド追加>
+<インスタンスメソッド廃止>
+<ドキュメント>
+<その他>
+・Shapeクラス+Fiberを使ったサンプル2つを追加
